<resources>
    <string name="app_name">Ikuzo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="username_prompt">User:</string>
    <string name="password_prompt">Password:</string>
    <string name="login">Login</string>
    <string name="title_activity_series_page">SeriesPageActivity</string>
    <string name="character_title">Characters</string>
    <string name="description_title">Description</string>
    <string name="browse_title">Browse</string>
    <string name="browse_year">Year</string>
    <string name="browse_season">Season</string>
    <string name="browse_sort">Sort</string>
    <string name="browse_type">Type</string>
    <string name="browse_status">Status</string>
    <string name="browse_desc">Descending</string>
    <string name="staff_title">Staff</string>
    <string name="update_title">Update</string>
    <string name="fav_title">Favourite</string>
    <string name="progress_title">Progress</string>
    <string name="score_title">Score</string>
    <string name="status_title">Status</string>
    <string name="reviews_title">Reviews</string>
    <string name="expand">More</string>
    <string name="collapse">Less</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Anime…</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
